force-app/main/default/objects/Ship__c/Ship__c.object-meta.xml
<CustomObject>
    <description>ship belongs to United company</description>
    <label>Ship</label>
    <nameField>
        <label>Ship Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ships</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>