force-app/main/default/objects/Ship__c/fields/Breadth_m__c.field-meta.xml
<CustomField>
    <fullName>Breadth_m__c</fullName>
    <description>Vessel&apos;s Breadth Moulded</description>
    <inlineHelpText>Vessel&apos;s Breadth Moulded</inlineHelpText>
    <label>Breadth, m</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>