force-app/main/default/objects/Ship__c/fields/Capacity_TEU__c.field-meta.xml
<CustomField>
    <fullName>Capacity_TEU__c</fullName>
    <description>Vessel&apos;s capacity in TEU (standard 20-feet container)</description>
    <inlineHelpText>Vessel&apos;s capacity in TEU (standard 20-feet container)</inlineHelpText>
    <label>Capacity, TEU</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>