force-app/main/default/objects/Ship__c/fields/Captain__c.field-meta.xml
<CustomField>
    <fullName>Captain__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Captain details</description>
    <inlineHelpText>Captain details</inlineHelpText>
    <label>Captain</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Ship&apos;s Captains</relationshipLabel>
    <relationshipName>Ships</relationshipName>
    <type>Lookup</type>
</CustomField>