force-app/main/default/objects/Ship__c/fields/Captain_s_Phone__c.field-meta.xml
<CustomField>
    <fullName>Captain_s_Phone__c</fullName>
    <formula>IF(ISBLANK( Captain__c ), &quot;&quot;,  Captain__r.Phone )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Captain&apos;s Phone</label>
    <type>Text</type>
</CustomField>