force-app/main/default/objects/Ship__c/fields/Depth_m__c.field-meta.xml
<CustomField>
    <fullName>Depth_m__c</fullName>
    <description>Vessel&apos;s Depth Moulded</description>
    <inlineHelpText>Vessel&apos;s Depth Moulded</inlineHelpText>
    <label>Depth, m</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>