force-app/main/default/objects/Ship__c/fields/Length_m__c.field-meta.xml
<CustomField>
    <fullName>Length_m__c</fullName>
    <description>Vessel maximum length in meters</description>
    <inlineHelpText>Vessel maximum length in meters</inlineHelpText>
    <label>Length, m</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>