force-app/main/default/objects/Ship__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <description>Unique IMO number of vessel</description>
    <externalId>true</externalId>
    <inlineHelpText>Unique IMO number of vessel</inlineHelpText>
    <label>Serial Number</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>