force-app/main/default/objects/Ship__c/fields/Ship_Class__c.field-meta.xml
<CustomField>
    <fullName>Ship_Class__c</fullName>
    <description>Class of the vessel dependent on her size</description>
    <inlineHelpText>Class of the vessel dependent on her size</inlineHelpText>
    <label>Ship Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Small Feeder</fullName>
            </value>
            <value>
                <fullName>Feeder</fullName>
            </value>
            <value>
                <fullName>Feedermax</fullName>
            </value>
            <value>
                <fullName>Panamax</fullName>
            </value>
            <value>
                <fullName>Post-Panamax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>