force-app/main/default/objects/Ship__c/fields/Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Tonnage__c</fullName>
    <description>Vessel Net Register Tonnage</description>
    <inlineHelpText>Vessel Net Register Tonnage</inlineHelpText>
    <label>Tonnage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>