force-app/main/default/objects/Ship__c/fields/Total_Containers_Carried__c.field-meta.xml
<CustomField>
    <fullName>Total_Containers_Carried__c</fullName>
    <label>Total Containers Carried</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>