force-app/main/default/objects/Ship__c/fields/Total_Voyages_Performed__c.field-meta.xml
<CustomField>
    <fullName>Total_Voyages_Performed__c</fullName>
    <label>Total Voyages Performed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>