force-app/main/default/objects/Ship__c/recordTypes/Contracted_Ship.recordType-meta.xml
<RecordType>
    <fullName>Contracted_Ship</fullName>
    <active>true</active>
    <description>Ships chartered by United Company</description>
    <label>Contracted Ship</label>
</RecordType>