force-app/main/default/objects/Ship__c/recordTypes/Private_Ship.recordType-meta.xml
<RecordType>
    <fullName>Private_Ship</fullName>
    <active>true</active>
    <description>Ships belongs to United Company</description>
    <label>Private Ship</label>
</RecordType>