force-app/main/default/objects/Ship__c/validationRules/Contract_Start_Date_earlier_thanDue_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Contract_Start_Date_earlier_thanDue_Date</fullName>
    <active>true</active>
    <description>Contract Start Date should be &lt; Contract Due Date</description>
    <errorConditionFormula>Contract_Start_Date__c  &gt;=  Contract_Due_Date__c</errorConditionFormula>
    <errorMessage>Contract Start Date should be &lt; Contract Due Date</errorMessage>
</ValidationRule>