force-app/main/default/objects/Ship__c/validationRules/Serial_Number_start_from_STA.validationRule-meta.xml
<ValidationRule>
    <fullName>Serial_Number_start_from_STA</fullName>
    <active>true</active>
    <description>Ship Serial Number should start or contain “STA-”</description>
    <errorConditionFormula>NOT CONTAINS(Serial_Number__c, &quot;STA-&quot;)</errorConditionFormula>
    <errorDisplayField>Serial_Number__c</errorDisplayField>
    <errorMessage>Ship Serial Number should start or contain “STA-”</errorMessage>
</ValidationRule>